Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
             section { padding: 25px; }
             header { justify-content: flex-start; } /* Allow scrolling on mobile nav */
         }
+        .footer {
+        width: 90%;
+        max-width: 900px;
+        margin: 40px auto;
+        padding: 25px;
+        text-align: center;
+        background-color: var(--card-bg);
+        border-radius: var(--border-radius-lg);
+        box-shadow: 0 10px 30px rgba(0,0,0,0.03);
+        font-size: 0.9rem;
+        color: var(--text-light);
+        }
+
     </style>
 </head>
 <body>
@@ -532,8 +545,12 @@
                 <li>Compras no Oiapoque e nos shoppings</li>
             </ul>
         </section>
-            <div class="footer">Meu instagram é limag_henrique e meu whatsapp é o 31 99421-7926, qualquer dúvida, estou à disposição!</div>
     </main>
+
+    <footer class="footer">
+    Meu instagram é limag_henrique e meu whatsapp é o 31 99421-7926, qualquer dúvida, estou à disposição!
+    </footer>
+
 
     <script>
         // Progress Bar Script
@@ -574,3 +591,4 @@
     </script>
 </body>
 </html>
+
