--- a/index.html
+++ b/index.html
@@ -548,8 +548,14 @@
     </main>
 
     <footer class="footer">
-    Meu instagram é limag_henrique e meu whatsapp é o 31 99421-7926, qualquer dúvida, estou à disposição!
+        <p>
+            <a href="https://www.instagram.com/limag_henrique/" target="_blank">Instagram</a> ·
+            <a href="https://wa.me/5531994217926" target="_blank">WhatsApp</a> ·
+            <a href="https://www.linkedin.com/in/henriquelimagusmao/" target="_blank">LinkedIn</a>
+        </p>
+        <p>Qualquer dúvida, estou à disposição.</p>
     </footer>
+
 
 
     <script>
@@ -591,4 +597,5 @@
     </script>
 </body>
 </html>
+
 
