Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 <li><strong>Ônibus intermunicipais (vermelhos, laranjas, roxos):</strong> aceitam só dinheiro ou cartão Ótimo, útil se vai para outras cidades.</li>
                 <li><strong>Metrô:</strong> nosso “metrô” funciona como trem. Pagamento com cartão (crédito/débito), BHBus, Ótimo ou dinheiro. Tem uma linha (sentidos Novo Eldorado — Contagem; Vilarinho — Venda Nova).</li>
                 <li><strong>Estações de bicicletas elétricas compartilhadas:</strong> por cerca de R$ 35,00/mês você tem direito a 4 viagens de 30 minutos cada (<a href="https://play.google.com/store/apps/details?id=pbsc.cyclefinder.tembicinosponsor&hl=pt_BR">app TemBici</a>) por dia — pagamento em cartão de crédito. Interessante se anda muito pelo Centro ou pela Lagoa da Pampulha.</li>
-                <li><strong>Apps de transporte:</strong> use Uber e 99. Ative a autenticação por código na corrida para segurança. Prefira pagar por cartão ou PIX, evite dinheiro.</li>
+                <li><strong>Apps de transporte:</strong> use Uber e <a href="https://99app.com/passageiro/baixe-o-app-da-99/">99</a>. Ative a autenticação por código na corrida para segurança. Prefira pagar por cartão ou PIX, evite dinheiro.</li>
                 <li><strong>Delivery:</strong> apps mais usados são <a href="https://play.google.com/store/apps/details?id=br.com.brainweb.ifood&hl=pt_BR">Ifood</a> e 99Food (Mesmo app do 99).</li>
             </ul>
         </section>
@@ -595,6 +595,7 @@
     </script>
 </body>
 </html>
+
 
 
 
