Add survival guide for newcomers to Belo Horizonte
Added comprehensive survival guide for newcomers to Belo Horizonte, including sections on documents, housing, communication, banking, safety, healthcare, university, and leisure activities.

--- a/en.html
+++ b/en.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Survival Guide - Belo Horizonte</title>
+    <style>
+        /* --- RESET & VARIABLES --- */
+        :root {
+            --primary-orange: #ff6600;
+            --light-orange: #fff0e6;
+            --bg-color: #f9f9f9;
+            --card-bg: #ffffff;
+            --text-main: #333333;
+            --text-light: #666666;
+            --border-radius-lg: 30px;
+            --border-radius-sm: 15px;
+            --nav-height: 70px;
+        }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html {
+            scroll-behavior: smooth;
+            scroll-padding-top: calc(var(--nav-height) + 20px);
+        }
+
+        body {
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            line-height: 1.6;
+        }
+
+        a {
+            color: var(--primary-orange);
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #cc5200;
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <nav>
+        <a href="#intro">Home</a>
+        <a href="#documentacao">Documents</a>
+        <a href="#moradia">Housing</a>
+        <a href="#comunicacao">Communication</a>
+        <a href="#bancos">Banks</a>
+        <a href="#transporte">Transportation</a>
+        <a href="#seguranca">Safety</a>
+        <a href="#saude">Healthcare</a>
+        <a href="#universidade">University</a>
+        <a href="#lazer">Leisure</a>
+    </nav>
+</header>
+
+<main>
+<section id="intro">
+    <h1>How to survive in Belo Horizonte</h1>
+    <p>Hey! Congrats on getting through all the bureaucracy to make it here! We’re really happy to welcome you to our campus. My name is Henrique and I’m your buddy (meaning: I’ll guide you and help you take your first steps so you actually enjoy being here).</p>
+    <p>I put together some important info for you — try saving this on your phone so you can check it whenever you need.</p>
+    <p>Everything is explained in a simple way. If you want to dive deeper into any topic, just text me and we’ll talk :)</p>
+</section>
+
+<section id="documentacao">
+    <h2>Documents</h2>
+    <p>You’ve probably already received (or will receive) a huge list of documents and step-by-step instructions. Brazil is famous for bureaucracy — and we’ll help you navigate this mess. The most important thing right now is the CPF. Remember this name — you’ll hear it at supermarkets, apps, pharmacies, university and even at the doctor’s office. CPF = Individual Taxpayer Registry: it’s a personal number used to identify you in systems.</p>
+    <p>Unlike the U.S. Social Security number, the CPF here is widely used to standardize registrations in companies, hospitals and universities. You can apply for a CPF:</p>
+    <ul>
+        <li>Before coming to Brazil: at the Brazilian consulate in your country (recommended to speed things up). See: <a href="https://www.gov.br/pt-br/servicos/inscrever-no-cpf-no-exterior" target="_blank">https://www.gov.br/pt-br/servicos/inscrever-no-cpf-no-exterior</a>. Tip: send the documents by email — they usually reply within 1–2 weeks.</li>
+        <li>After arriving: at Federal Revenue offices in Belo Horizonte.</li>
+    </ul>
+    <p>Besides the CPF, you’ll need the National Migratory Registration (CRNM). You have up to 30 days to register your migration status with the Federal Police. This document is required for enrollment at UFMG.</p>
+    <p>The CRNM works like an ID card: you don’t need to carry your passport everywhere (just keep a printed copy for emergencies) — carry the CRNM instead.</p>
+</section>
+
+<section id="moradia">
+    <h2>Housing</h2>
+    <p>UFMG offers student housing for a small number of exchange students. Since it’s a public university, there’s no rent — but it’s <strong>extremely hard to get.</strong></p>
+    <p>More realistic options are renting a room in a student house or apartment:</p>
+    <ul>
+        <li><a href="https://hyhaus.com.br" target="_blank">https://hyhaus.com.br</a> — R$ 1,890/month</li>
+        <li>Look for room listings here: <a href="https://republicasfederais.jimdofree.com/ufmg/" target="_blank">https://republicasfederais.jimdofree.com/ufmg/</a></li>
+        <li>Gargano Student House — (31) 99278-9145</li>
+        <li>Coliving — <a href="https://www.instagram.com/colivingbh/" target="_blank">https://www.instagram.com/colivingbh/</a></li>
+    </ul>
+</section>
+
+<section id="comunicacao">
+    <h2>Communication</h2>
+    <p>Most people in BH speak only Portuguese. If you struggle with the language, ask them to speak slowly, repeat in English slowly, use gestures — people are usually very helpful.</p>
+    <p>And don’t worry! We’re not French 😄 — no one gets offended if you don’t speak Portuguese. Most people will genuinely try to help, even in English, Spanish or French.</p>
+
+    <h3>SIM card</h3>
+    <p>As soon as you have your CPF, go to a newsstand, drugstore/pharmacy or supermarket and buy a SIM card. There are three main carriers — I recommend Claro for price/speed. For around R$35/month, you get unlimited national calls and 12GB of data.</p>
+    <p>If your phone doesn’t have a SIM slot, message me and we’ll figure it out.</p>
+    <p>Download <a href="https://www.whatsapp.com/download">WhatsApp</a> (if you don’t have it yet) — it’s the main communication tool here, along with Instagram. On Instagram, follow: ufmgdr, ufmg, your school, spotted_ufmg (gossip + announcements).</p>
+</section>
+
+<section id="bancos">
+    <h2>Banks</h2>
+    <p>With CPF and a phone number, it’s time to open a bank account!</p>
+    <ul>
+        <li><strong>PIX:</strong> instant payment system used by everyone (no fees for individuals) — think of it as the government’s Venmo/PayPal.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=br.com.intermedium&hl=pt_BR"><strong>Banco Inter:</strong></a> very popular; allows national and international transfers (SWIFT/ACH) with no fees, easy currency exchange, investments, and debit cards in BRL and USD.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=com.revolut.revolut&hl=pt_BR"><strong>Revolut, Wise, Nubank:</strong></a> other good digital banks with debit cards and easy FX.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=br.com.bb.android&hl=pt_BR"><strong>Banco do Brasil:</strong></a> Open a STUDENT account. Foreigners have an easier time applying for a credit card. Best option for paying official fees and the UFMG club.</li>
+    </ul>
+</section>
+
+<section id="seguranca">
+    <h2>Safety</h2>
+    <p>You made a good choice: BH is relatively calm and very student-friendly. Still, it’s a big city, so urban issues exist.</p>
+    <ul>
+        <li>Most common crime: pickpocketing.</li>
+        <li>Tip: stay in groups, especially during the day in busy areas; keep your phone and documents in secure pockets or zipped backpacks.</li>
+        <li>If you need to use your phone, step into a store.</li>
+    </ul>
+</section>
+
+<section id="saude">
+    <h2>Healthcare</h2>
+    <p>Got the flu? Dengue? Yellow fever? Need condoms? Good news: Brazil has free public healthcare for anyone in the country.</p>
+    <p><strong>UBS:</strong> general care, vaccines, condoms, flu. Bring CRNM, CPF and proof of address.</p>
+    <p><strong>UPA:</strong> for real emergencies.</p>
+</section>
+
+<section id="universidade">
+    <h2>University</h2>
+    <p>To get involved and clear doubts, join unofficial UFMG WhatsApp groups: <a href="https://wa.me/5531991579687?text=Oi%20Lucas,%20qual%20o%20Link%20dos%20grupos?" target="_blank">WhatsApp link</a></p>
+</section>
+
+<section id="lazer">
+    <h2>Leisure</h2>
+    <p>To enjoy BH to the fullest:</p>
+</section>
+</main>
+
+<footer class="footer">
+    <p>
+        <a href="https://www.instagram.com/limag_henrique/" target="_blank">My Instagram</a> ·
+        <a href="https://wa.me/5531994217926" target="_blank">My WhatsApp</a> ·
+        <a href="https://www.linkedin.com/in/henriquelimagusmao/" target="_blank">My LinkedIn</a>
+    </p>
+    <p>If you have any questions, I’m here for you ;)</p>
+</footer>
+
+</body>
+</html>
