Create survival guide for students in Belo Horizonte
Added a comprehensive survival guide for new students in Belo Horizonte, including sections on documentation, accommodation, communication, banking, safety, health, university integration, and leisure activities.

--- a/fr.html
+++ b/fr.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guide de survie - Belo Horizonte</title>
+    <style>
+        /* --- RESET & VARIABLES --- */
+        :root {
+            --primary-orange: #ff6600;
+            --light-orange: #fff0e6;
+            --bg-color: #f9f9f9;
+            --card-bg: #ffffff;
+            --text-main: #333333;
+            --text-light: #666666;
+            --border-radius-lg: 30px;
+            --border-radius-sm: 15px;
+            --nav-height: 70px;
+        }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html {
+            scroll-behavior: smooth;
+            scroll-padding-top: calc(var(--nav-height) + 20px);
+        }
+
+        body {
+            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            line-height: 1.6;
+        }
+
+        a {
+            color: var(--primary-orange);
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        a:hover {
+            color: #cc5200;
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <nav>
+        <a href="#intro">Accueil</a>
+        <a href="#documentacao">Documents</a>
+        <a href="#moradia">Logement</a>
+        <a href="#comunicacao">Communication</a>
+        <a href="#bancos">Banques</a>
+        <a href="#transporte">Transports</a>
+        <a href="#seguranca">Sécurité</a>
+        <a href="#saude">Santé</a>
+        <a href="#universidade">Université</a>
+        <a href="#lazer">Loisirs</a>
+    </nav>
+</header>
+
+<main>
+<section id="intro">
+    <h1>Comment survivre à Belo Horizonte</h1>
+    <p>Salut ! Félicitations d’avoir surmonté toute la bureaucratie pour arriver jusqu’ici ! Nous sommes vraiment heureux de t’accueillir sur notre campus. Je m’appelle Henrique et je suis ton parrain (c’est-à-dire : je vais t’orienter et t’aider à faire tes premiers pas pour que tu te sentes vraiment bien ici).</p>
+    <p>J’ai rassemblé quelques informations importantes pour toi — essaie d’enregistrer cette page sur ton téléphone pour la consulter quand tu en auras besoin.</p>
+    <p>J’ai tout expliqué de manière simple. Si tu veux approfondir un sujet précis, écris-moi et on en parle :)</p>
+</section>
+
+<section id="documentacao">
+    <h2>Documents</h2>
+    <p>Tu as sûrement déjà reçu (ou tu recevras bientôt) une énorme liste de documents et un guide étape par étape. Le Brésil est célèbre pour sa bureaucratie — et on va t’aider à t’y retrouver. Le plus important pour l’instant est le CPF. Retenir ce nom est essentiel — tu l’entendras au supermarché, dans les applis, à la pharmacie, à l’université et même chez le médecin. CPF = Cadastro de Pessoas Físicas : c’est un numéro personnel utilisé pour t’identifier dans les systèmes.</p>
+    <p>Contrairement au Social Security Number des États-Unis, le CPF est ici utilisé partout pour standardiser les inscriptions dans les entreprises, hôpitaux et universités. Tu peux demander ton CPF :</p>
+    <ul>
+        <li>Avant de venir au Brésil : au consulat brésilien de ton pays (recommandé pour gagner du temps). Voir : <a href="https://www.gov.br/pt-br/servicos/inscrever-no-cpf-no-exterior" target="_blank">https://www.gov.br/pt-br/servicos/inscrever-no-cpf-no-exterior</a>. Astuce : envoie les documents par e-mail ; ils répondent généralement sous 1 à 2 semaines.</li>
+        <li>Après ton arrivée : dans les bureaux de la Receita Federal à Belo Horizonte.</li>
+    </ul>
+    <p>En plus du CPF, tu auras besoin du Registre National Migratoire (CRNM). Tu disposes de 30 jours pour enregistrer ta situation migratoire auprès de la Police Fédérale. Ce document est obligatoire pour ton inscription à l’UFMG.</p>
+    <p>Le CRNM fonctionne comme une carte d’identité : inutile de te balader avec ton passeport tout le temps (garde seulement une copie papier en cas d’urgence) — porte plutôt le CRNM.</p>
+</section>
+
+<section id="moradia">
+    <h2>Logement</h2>
+    <p>L’UFMG propose des logements universitaires pour un nombre très limité d’étudiants en échange. Comme il s’agit d’une université publique, il n’y a pas de loyer, mais c’est <strong>extrêmement difficile à obtenir.</strong></p>
+    <p>Les options les plus réalistes sont de louer une chambre dans une colocation étudiante ou un appartement :</p>
+    <ul>
+        <li><a href="https://hyhaus.com.br" target="_blank">https://hyhaus.com.br</a> — R$ 1 890 / mois</li>
+        <li>Rechercher des chambres sur ce portail : <a href="https://republicasfederais.jimdofree.com/ufmg/" target="_blank">https://republicasfederais.jimdofree.com/ufmg/</a></li>
+        <li>République Gargano — (31) 99278-9145</li>
+        <li>Coliving — <a href="https://www.instagram.com/colivingbh/" target="_blank">https://www.instagram.com/colivingbh/</a></li>
+    </ul>
+</section>
+
+<section id="comunicacao">
+    <h2>Communication</h2>
+    <p>La plupart des habitants de BH parlent uniquement portugais. Si tu as des difficultés avec la langue, demande de parler plus lentement, répète en anglais doucement, utilise des gestes — les gens sont généralement très serviables.</p>
+    <p>Et ne t’inquiète pas ! Nous ne sommes pas français 😄 — personne ne se fâche si tu ne parles pas portugais. Dans la grande majorité des cas, les gens feront de leur mieux pour t’aider, même en anglais, espagnol ou français.</p>
+
+    <h3>Carte SIM</h3>
+    <p>Dès que tu as ton CPF, va dans un kiosque à journaux, une pharmacie ou un supermarché pour acheter une carte SIM. Il y a trois grands opérateurs — je recommande Claro pour le rapport qualité/prix. Pour environ R$ 35 par mois, tu as les appels nationaux illimités et 12 Go d’internet.</p>
+    <p>Si ton téléphone n’a pas de slot SIM, écris-moi et on trouvera une solution.</p>
+    <p>Télécharge <a href="https://www.whatsapp.com/download">WhatsApp</a> (si ce n’est pas déjà fait) — c’est le principal moyen de communication ici, avec Instagram. Sur Instagram, suis : ufmgdr, ufmg, l’école de ton cursus, spotted_ufmg (ragots et annonces).</p>
+</section>
+
+<section id="bancos">
+    <h2>Banques</h2>
+    <p>Avec ton CPF et un numéro de téléphone, il est temps d’ouvrir un compte bancaire !</p>
+    <ul>
+        <li><strong>PIX :</strong> système de paiement instantané utilisé par tout le monde (sans frais pour les particuliers) — l’équivalent d’un Venmo/PayPal public.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=br.com.intermedium&hl=pt_BR"><strong>Banco Inter :</strong></a> très populaire ; permet de recevoir des virements nationaux et internationaux (SWIFT/ACH) sans frais, change facile, investissements et cartes de débit en BRL et USD.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=com.revolut.revolut&hl=pt_BR"><strong>Revolut, Wise, Nubank :</strong></a> autres options de banques numériques avec carte de débit et change simplifié.</li>
+        <li><a href="https://play.google.com/store/apps/details?id=br.com.bb.android&hl=pt_BR"><strong>Banco do Brasil :</strong></a> Ouvre un compte ÉTUDIANT. Les étrangers ont plus de facilité à obtenir une carte de crédit. Idéal pour payer les frais officiels et le club de l’UFMG.</li>
+    </ul>
+</section>
+
+<section id="seguranca">
+    <h2>Sécurité</h2>
+    <p>Bon choix : BH est relativement tranquille et très universitaire. Cela reste une grande ville, donc des problèmes urbains existent.</p>
+    <ul>
+        <li>Crime le plus courant : le vol à la tire.</li>
+        <li>Conseils : déplace-toi accompagné, surtout en journée et dans les zones animées ; garde ton téléphone et tes documents dans des poches sécurisées ou des sacs bien fermés.</li>
+        <li>Pour utiliser ton téléphone dans la rue, entre dans un magasin.</li>
+    </ul>
+</section>
+
+<section id="saude">
+    <h2>Santé</h2>
+    <p>Grippe ? Dengue ? Fièvre jaune ? Besoin de préservatifs ? Bonne nouvelle : le Brésil dispose d’un système de santé publique gratuit pour toute personne présente sur le territoire.</p>
+    <p><strong>UBS :</strong> consultations générales, vaccins, préservatifs, grippe. Apporte ton CRNM, CPF et un justificatif de domicile.</p>
+    <p><strong>UPA :</strong> pour les urgences réelles.</p>
+</section>
+
+<section id="universidade">
+    <h2>Université</h2>
+    <p>Pour t’intégrer davantage et poser tes questions, rejoins les groupes WhatsApp non officiels de l’UFMG : <a href="https://wa.me/5531991579687?text=Oi%20Lucas,%20qual%20o%20Link%20dos%20grupos?" target="_blank">Lien WhatsApp</a></p>
+</section>
+
+<section id="lazer">
+    <h2>Loisirs</h2>
+    <p>Pour profiter pleinement de BH :</p>
+</section>
+</main>
+
+<footer class="footer">
+    <p>
+        <a href="https://www.instagram.com/limag_henrique/" target="_blank">Mon Instagram</a> ·
+        <a href="https://wa.me/5531994217926" target="_blank">Mon WhatsApp</a> ·
+        <a href="https://www.linkedin.com/in/henriquelimagusmao/" target="_blank">Mon LinkedIn</a>
+    </p>
+    <p>Si tu as la moindre question, je suis dispo ;)</p>
+</footer>
+
+</body>
+</html>
