--- a/es.html
+++ b/es.html
@@ -279,10 +279,9 @@
             <p>El CRNM funciona como una Tarjeta de Identidad: no es necesario andar con el pasaporte todo el tiempo (lleva solo una copia impresa para emergencias) — lleva el CRNM contigo.</p>
             
             <h3>Paso a paso para obtener el CRNM</h3>
-            <p>El día agendado, lleva:</p>
             <ol class="doc-list">
                 <li>Formulario completado <a href="https://servicos.dpf.gov.br/sismigra-internet/faces/publico/tipoSolicitacao/permanenciaRegistroEmissaoCie.seam?cid=12052" target="_blank">Enlace del formulario</a></li>
-                <li>Dos fotos 3×4, recientes, a color y con fondo blanco.</li>
+                <li>Una foto 3×4, reciente, a color y con fondo blanco.</li>
                 <li>Declaración de dirección electrónica y otros medios de contacto <a href="https://www.gov.br/pf/pt-br/assuntos/imigracao/declaracoes-e-formularios/declaracao-eletronica-e-demais-meios-de-contato.pdf" target="_blank">Enlace de la declaración</a></li>
                 <li>Copia del comprobante de residencia (factura de luz, alquiler, internet, etc.) a tu nombre, si tienes.</li>
                 <li>Documento de identificación oficial (pasaporte, documento del país de origen con foto).</li>
@@ -290,7 +289,7 @@
                 <li>Carta de aceptación de la UFMG.</li>
                 <li>Comprobante de pago de la tasa de emisión del CRNM (GRU). Código de receta: 140120. Valor de referencia: R$ 204,77 (verifícalo al momento de la emisión).</li>
             </ol>
-            <p>Después de tener estos documentos, no hay necesidad de andar con el pasaporte, lleva solo una copia y anda siempre con tu CRNM.</p>
+            <p>Después de tener esto documento, no hay necesidad de andar con el pasaporte, lleva solo una copia y anda siempre con tu CRNM.</p>
         </section>
 
         <section id="moradia">
