Correct wording for Banco do Brasil description

--- a/es.html
+++ b/es.html
@@ -429,7 +429,7 @@
                 <li><strong>PIX:</strong> sistema de pagos instantáneos usado por todo el mundo (sin tasas para personas físicas) — es como un Venmo/Zelle del gobierno.</li>
                 <li><a href="https://play.google.com/store/apps/details?id=br.com.intermedium&hl=pt_BR"><strong>Banco Inter:</strong></a> uno de los bancos digitales más usados; permite recibir transferencias nacionales e internacionales SWIFT/ACH sin tasa, cambio fácil, inversiones y tarjeta de débito en BRL y USD.</li>
                 <li><a href="https://play.google.com/store/apps/details?id=com.revolut.revolut&hl=pt_BR"><strong>Revolut, Wise, Nubank:</strong></a> otras opciones de banco con tarjeta de débito, cambio fácil y apertura online.</li>
-                <li><a href="https://play.google.com/store/apps/details?id=br.com.bb.android&hl=pt_BR"><strong>Banco do Brasil:</strong></a> Abre una cuenta UNIVERSITARIA. Los extranjeros consiguen aplicar para tener una tarjeta de crédito más fácilmente. Es el más adecuado para pagar tasas, multas y la mensualidad del club de la UFMG.</li>
+                <li><a href="https://play.google.com/store/apps/details?id=br.com.bb.android&hl=pt_BR"><strong>Banco do Brasil:</strong></a> Abre una cuenta UNIVERSITARIA. Los extranjeros pueden aplicar para tener una tarjeta de crédito más fácilmente. Es el más adecuado para pagar tasas, multas y la mensualidad del club de la UFMG.</li>
             </ul>
             <p>Todas las opciones anteriores tienen cuentas sin costos básicos, pero cuidado con el crédito, ya que puede generar deuda rápido.</p>
             <p>¿Dinero físico (efectivo)? Casi nadie usa, pero vale la pena tener algunos billetes para emergencias.</p>
